corrected aside alignment

--- a/teamlogisticsng/src/App.css
+++ b/teamlogisticsng/src/App.css
@@ -86,6 +86,7 @@ span {
 .company {
   width: 100%;
   padding: 2rem;
+  margin: 0;
 }
 .company p {
   text-align: left;
@@ -96,21 +97,26 @@ span {
   overflow: hidden;
   box-sizing: border-box;
   display: inline-block;
-  padding-left: 100%;
-  animation: marquee 15s linear infinite;
+  padding-left: 0;
+  animation: marquee 5s linear infinite;
 }
 @keyframes marquee {
   0%   { transform: translate(0, 0); }
   100% { transform: translate(-100%, 0); }
 }
 aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
+  width: 40%;
   float: right;
   font-style: italic;
   background-color: lightgray;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+    .marquee {
+     display: none;
+    }
+  }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
